@@ -248,7 +248,8 @@ class ConstrainTypesMixin:
 
         #if mode == DISABLED or \
         #        (parent and parent.portal_types != self.portal_types):
-        if mode == DISABLED or not parentPortalTypeEqual(self):
+        if mode == DISABLED or \
+	         (mode == ACQUIRE and not parentPortalTypeEqual(self) ):
             return PortalFolder.allowedContentTypes(self)
 
         globalTypes = self.getDefaultAddableTypes()
@@ -269,7 +270,8 @@ class ConstrainTypesMixin:
 
         #if mode == DISABLED or \
         #        (parent and parent.portal_types != self.portal_types):
-        if mode == DISABLED or not parentPortalTypeEqual(self):
+        if mode == DISABLED or \
+	          (mode == ACQUIRE and not parentPortalTypeEqual(self) ):
             return PortalFolder.invokeFactory(self, type_name, id,
                                                 RESPONSE=None, *args, **kw)
 
